--- a/dbv1/version.cfg
+++ b/dbv1/version.cfg
@@ -3,8 +3,18 @@
     "file_info":{
         "AppEmit.exe":{
             "mark_o0n1u2":2,
-            "sha1":"5E04FE45354E41CC2865A66F65FCC2464AFD14B3",
-            "ver":"1.0.20.563"
+            "sha1":"4087350CB011F1957E0BED3506877556D491B697",
+            "ver":"1.0.20.565"
+        },
+        "bin/cert/ae20200909.crt":{
+            "mark_o0n1u2":1,
+            "sha1":"C812F9F7543B42B3401C78A552F63A6C84B07C87",
+            "ver":"1.0.20"
+        },
+        "bin/cert/ae20200909.key":{
+            "mark_o0n1u2":1,
+            "sha1":"0E86E11937770C50364EFFE55E2CBA385CA12F0D",
+            "ver":"1.0.20"
         },
         "bin/cfg/aecpctb.db":{
             "mark_o0n1u2":0,
@@ -12,7 +22,7 @@
             "ver":"1.0.16"
         },
         "bin/cfg/aeset.stg":{
-            "mark_o0n1u2":2,
+            "mark_o0n1u2":0,
             "sha1":"F21E4206B1132FDF9E20350245A16A829A1D4169",
             "ver":"1.0.20"
         }
